rustdocs/errors/rust-bitcoin-bitcoin-src-consensus_validation.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:7:5
  |
7 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:8:5
  |
8 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:10:5
   |
10 | use internals::write_err;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 7 + extern crate internals;
   |

error[E0432]: unresolved import `crate::amount`
  --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:12:12
   |
12 | use crate::amount::Amount;
   |            ^^^^^^ use of unresolved module or unlinked crate `amount`
   |
help: you might be missing a crate named `amount`, add it to your project and import it in your code
   |
 7 + extern crate amount;
   |

error[E0432]: unresolved import `crate::consensus`
  --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:13:12
   |
13 | use crate::consensus::encode;
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
   |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
   |
 7 + extern crate consensus;
   |

error[E0432]: unresolved import `crate::consensus_validation`
  --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:15:5
   |
15 | use crate::consensus_validation;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `consensus_validation` in the root

error[E0432]: unresolved import `crate::internal_macros`
  --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:16:12
   |
16 | use crate::internal_macros::define_extension_trait;
   |            ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`
   |
help: you might be missing a crate named `internal_macros`, add it to your project and import it in your code
   |
 7 + extern crate internal_macros;
   |

error[E0432]: unresolved import `crate::script`
  --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:17:12
   |
17 | use crate::script::ScriptPubKey;
   |            ^^^^^^ use of unresolved module or unlinked crate `script`
   |
help: you might be missing a crate named `script`, add it to your project and import it in your code
   |
 7 + extern crate script;
   |

error[E0432]: unresolved import `crate::transaction`
  --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:18:12
   |
18 | use crate::transaction::{OutPoint, Transaction, TxOut};
   |            ^^^^^^^^^^^ use of unresolved module or unlinked crate `transaction`
   |
help: you might be missing a crate named `transaction`, add it to your project and import it in your code
   |
 7 + extern crate transaction;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoinconsensus`
   --> ../rust-bitcoin/bitcoin/src/consensus_validation.rs:218:34
    |
218 | pub struct BitcoinconsensusError(bitcoinconsensus::Error);
    |                                  ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoinconsensus`
    |
    = help: you might be missing a crate named `bitcoinconsensus`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
